<resources>
    <string name="app_name">progress</string>
    <!-- loginnactivity-->
    <string name="accountlogin">账号登录</string>
    <string name="useraccount">账号：</string>
    <string name="userpassword">密码：</string>
    <string name="account">在此输入账号</string>
    <string name="password">在此输入密码</string>
    <string name="rememeberpassword">下次自动登录</string>
    <string name="login">登录</string>
    <string name="otherlogion">第三方登录:</string>
    <string name="newregister">新用户立即注册</string>
    <string name="loading">登录中.....</string>
    <!--registeractivity -->
    <string name="accountregister">账号注册</string>
    <string name="confirmpassword">确认：</string>
    <string name="register">注册</string>
    <string name="haveaccount">已有账号？去登录</string>
    <string name="accountlength">账号长度在6到10位</string>
    <string name="passwordlength">密码长度在6到20位</string>
    <!-- perfectInFformation-->
    <string name="personInformation">个人信息</string>
    <string name="username">姓名：</string>
    <string name="namelength">名字长度在2到10位</string>
    <string name="userage">年龄:</string>
    <string name="usersex">性别：</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="school">学校：</string>
    <string name="gather">请填写你的支付宝账号:</string>
    <string name="perfect">提交</string>
    <string name="tip">请准确填写你的支付宝账号否则可能导致转账不成功</string>
    <!--mainactivity -->
    <string name="mytask">我的任务</string>
    <string name="receive">已领任务</string>
    <string name="othertask">任务中心</string>
    <!-- personcenterfragment-->
    <string name="person">个人中心</string>
    <string name="changeperinfo">修改个人信息</string>
    <string name="apprise">待评价</string>
    <string name="exceptiontask">异常任务</string>
    <string name="personInfo">个人信息</string>
    <string name="changelogin">退出当前账号</string>
    <string name="fshtask">已完成任务</string>
    <string name="updapassword">修改密码</string>
    <string name="waitpay">待付款</string>
    <!--taskThread -->
    <string name="issuetask">发布任务</string>
    <string name="request">要求：</string>
    <string name="endtime">结束时间:</string>
    <string name="noreceive">未被领取</string>
    <string name="giveup">放弃</string>
    <string name="pay">付款</string>
    <string name="issueinfo">任务信息</string>
    <string name="writerequest">这里写下要求10-140字</string>
    <string name="price">价格:</string>
    <string name="pricemath">0.0</string>
    <string name="type">类型</string>
    <!-- othertask-->
    <string name="receivetask">领取任务</string>
    <string name="finishtime">完成期限：</string>
    <!-- receivetask-->
    <string name="haveretask">已领任务</string>
</resources>
