<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/issueinfo"
        android:textSize="25dp" />
    <TextView
        android:layout_below="@id/tv_info"
        android:id="@+id/tv_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request"
        android:textSize="20dp"
        />
    <EditText
        android:id="@+id/ist_req"
        android:layout_below="@id/tv_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/writerequest"
        />
    <LinearLayout
        android:id="@+id/line_pritype"
        android:layout_below="@id/ist_req"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="20dp"
            />
        <EditText
            android:id="@+id/ist_pri"
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="wrap_content"
            android:text="@string/pricemath"
            android:background="@null"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="元"
            android:gravity="center"
            android:textSize="20dp"
            />
        <TextView
            android:id="@+id/tv_type"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/ist_type"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/school"
            android:textSize="20dp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_starttime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_pritype"
        android:layout_alignBottom="@id/ist_endtime"
        android:gravity="center"
        android:text="@string/endtime"
        android:textSize="20dp"
        />
    <EditText
        android:id="@+id/ist_endtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_starttime"
        android:layout_below="@id/line_pritype"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@null"
        android:text="0"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_pritype"
        android:layout_toRightOf="@id/ist_endtime"
        android:layout_alignBottom="@id/ist_endtime"
        android:gravity="center"
        android:text="天"
        android:textSize="20dp"
        />
</RelativeLayout>
