<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackground"
    tools:context=".personcenter.item.pertInfonFrag">

    <RelativeLayout
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/info_iv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_action_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/personInformation"
            android:textSize="25dp" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/line_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/back"
        android:layout_marginTop="10dp"
        android:background="@color/colorpercenweight"
        >
        <TextView
            android:id="@+id/info_tv_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="account"
            android:textSize="20dp"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/line_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_account"
        android:layout_marginTop="10dp"
        android:background="@color/colorpercenweight">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@color/colorpercenweight"
            android:gravity="center"
            android:text="@string/username"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/info_ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/namelength"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_name"
        android:layout_marginTop="10dp"
        android:background="@color/colorpercenweight">

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:background="@color/colorpercenweight"
            android:text="@string/userage"
            android:textSize="20dp" />

        <SeekBar
            android:id="@+id/info_sb_age"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="8"
            android:max="100" />

        <TextView
            android:id="@+id/info_tv_showage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:maxLines="1"
            android:text="0"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_age"
        android:layout_marginTop="10dp"
        android:background="@color/colorpercenweight">

        <TextView
            android:id="@+id/tv_sex"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@color/colorpercenweight"
            android:text="@string/usersex"
            android:textSize="20dp" />

        <RadioGroup
            android:id="@+id/info_rg_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/info_rd_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#355e39"
                android:checked="true"
                android:text="@string/man"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/info_rd_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/woman"
                android:textSize="20dp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_sex"
        android:layout_marginTop="10dp"
        android:background="@color/colorpercenweight">

        <TextView
            android:id="@+id/tv_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_sex"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/school"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/info_tv_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/school"
            android:drawablePadding="10dp"
            android:textSize="20dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_school"
        android:layout_marginTop="10dp"
        android:background="@color/colorperweight">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gather"
            android:background="@color/colorpercenweight"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/info_btn_perfect"
        android:layout_below="@id/line_picture"
        android:background="@color/colorperweight"
        android:orientation="vertical">

        <EditText
            android:id="@+id/info_iv_gather"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25dp"
            android:background="@color/colorpercenweight"
            android:text="@string/tip"
            />
    </LinearLayout>

    <Button
        android:id="@+id/info_btn_perfect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/perfect"
        android:background="@color/colorpercenweight"
        android:textSize="25dp" />
</RelativeLayout>