<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".personcenter.PercenFrag"
    android:background="#ffffff"
    >
    <LinearLayout
        android:id="@+id/line_percen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorpercenweight"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:text="@string/person"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="#000000"
            />
        <ImageView
            android:id="@+id/percen_perfect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/perfect"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/line_mytask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_percen"
        android:layout_marginTop="15dp"
        android:background="@color/colorpercenweight">
        <TextView
            android:id="@+id/percen_tv_exceptiontask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/mytask_press"
            android:drawableRight="@drawable/arrive"
            android:text="@string/exceptiontask"
            android:gravity="center|left"
            android:textSize="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/line_appraise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_mytask"
        android:layout_marginTop="15dp"
        android:background="@color/colorpercenweight">
        <TextView
            android:id="@+id/percen_tv_appraise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/apprise"
            android:drawableRight="@drawable/arrive"
            android:text="@string/apprise"
            android:gravity="center|left"
            android:textSize="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/line_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_appraise"
        android:layout_marginTop="15dp"
        android:background="@color/colorpercenweight">
        <TextView
            android:id="@+id/percen_tv_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/waitpay"
            android:drawableRight="@drawable/arrive"
            android:text="@string/waitpay"
            android:gravity="center|left"
            android:textSize="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/line_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_pay"
        android:layout_marginTop="15dp"
        android:background="@color/colorpercenweight">
        <TextView
            android:id="@+id/percen_tv_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/finishtask"
            android:drawableRight="@drawable/arrive"
            android:text="@string/fshtask"
            android:gravity="center|left"
            android:textSize="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/line_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorpercenweight"
        >
        <TextView
            android:id="@+id/percen_tv_chalogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/chaglogin"
            android:text="@string/changelogin"
            android:gravity="center|left"
            android:textSize="20dp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/percen_tv_perfectInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="100dp"
        />
</RelativeLayout>