<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainviewActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/main_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/main_line_bottom">

    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/main_line_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/main_line_mytask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_image_mytask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mytask" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mytask"
                android:textColor="#030303" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_line_othertask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_image_othertask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/othertask" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/othertask"
                android:textColor="#030303" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_line_receive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_image_receive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/receivetask" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receive"
                android:textColor="#030303" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_line_personcenter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_image_personcenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:src="@drawable/personcenter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person"
                android:textColor="#030303" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>